Converted the Forum views to Razor.
--HG--
rename : LanLordz/Views/Forums/CreatePost.spark => LanLordz/Views/Forums/CreatePost.cshtml
rename : LanLordz/Views/Forums/DeletePost.spark => LanLordz/Views/Forums/DeletePost.cshtml
rename : LanLordz/Views/Forums/EditPost.spark => LanLordz/Views/Forums/EditPost.cshtml
rename : LanLordz/Views/Forums/Index.spark => LanLordz/Views/Forums/Index.cshtml
rename : LanLordz/Views/Forums/Search.spark => LanLordz/Views/Forums/Search.cshtml
rename : LanLordz/Views/Forums/_ThreadListView.spark => LanLordz/Views/Forums/ThreadListView.cshtml
rename : LanLordz/Views/Forums/ViewForum.spark => LanLordz/Views/Forums/ViewForum.cshtml
rename : LanLordz/Views/Forums/ViewThread.spark => LanLordz/Views/Forums/ViewThread.cshtml
rename : LanLordz/Views/Forums/ViewUnread.spark => LanLordz/Views/Forums/ViewUnread.cshtml

--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -528,15 +528,15 @@
     <Content Include="Views\Events\RollBackRound.spark" />
     <Content Include="Views\Events\StartNextRound.spark" />
     <Content Include="Views\Events\UnlockTeams.cshtml" />
-    <Content Include="Views\Forums\CreatePost.spark" />
-    <Content Include="Views\Forums\DeletePost.spark" />
-    <Content Include="Views\Forums\EditPost.spark" />
-    <Content Include="Views\Forums\Index.spark" />
-    <Content Include="Views\Forums\Search.spark" />
-    <Content Include="Views\Forums\ViewForum.spark" />
-    <Content Include="Views\Forums\ViewThread.spark" />
-    <Content Include="Views\Forums\ViewUnread.spark" />
-    <Content Include="Views\Forums\_ThreadListView.spark" />
+    <Content Include="Views\Forums\CreatePost.cshtml" />
+    <Content Include="Views\Forums\DeletePost.cshtml" />
+    <Content Include="Views\Forums\EditPost.cshtml" />
+    <Content Include="Views\Forums\Index.cshtml" />
+    <Content Include="Views\Forums\Search.cshtml" />
+    <Content Include="Views\Forums\ViewForum.cshtml" />
+    <Content Include="Views\Forums\ViewThread.cshtml" />
+    <Content Include="Views\Forums\ViewUnread.cshtml" />
+    <Content Include="Views\Forums\ThreadListView.cshtml" />
     <Content Include="Views\Home\Index.cshtml" />
     <Content Include="Views\Home\ViewCrew.cshtml" />
     <Content Include="Views\Home\ViewNews.cshtml" />
