Converted the Shared views to Razor.
--HG--
rename : LanLordz/Views/Shared/Error.spark => LanLordz/Views/Shared/Error.cshtml
rename : LanLordz/Views/Shared/NotAuthorized.spark => LanLordz/Views/Shared/NotAuthorized.cshtml
rename : LanLordz/Views/Shared/NotAvailable.spark => LanLordz/Views/Shared/NotAvailable.cshtml
rename : LanLordz/Views/Shared/NotFound.spark => LanLordz/Views/Shared/NotFound.cshtml

--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -539,19 +539,16 @@
     <Content Include="Views\Home\ViewSponsors.cshtml" />
     <Content Include="Views\Images\Gallery.cshtml" />
     <Content Include="Views\Images\ViewImage.cshtml" />
-    <Content Include="Views\Layouts\Application.spark" />
     <Content Include="Views\Polls\Create.cshtml" />
     <Content Include="Views\Polls\Details.cshtml" />
     <Content Include="Views\Polls\DetailsPartial.cshtml" />
     <Content Include="Views\Polls\Index.cshtml" />
     <Content Include="Views\Polls\PollDetails.cshtml" />
-    <Content Include="Views\Shared\Error.spark" />
-    <Content Include="Views\Shared\NotAuthorized.spark" />
-    <Content Include="Views\Shared\NotAvailable.spark" />
-    <Content Include="Views\Shared\NotFound.spark" />
+    <Content Include="Views\Shared\Error.cshtml" />
+    <Content Include="Views\Shared\NotAuthorized.cshtml" />
+    <Content Include="Views\Shared\NotAvailable.cshtml" />
+    <Content Include="Views\Shared\NotFound.cshtml" />
     <Content Include="Views\Shared\PaginationView.cshtml" />
-    <Content Include="Views\Shared\_PaginationView.spark" />
-    <Content Include="Views\Shared\_UserInfoBox.spark" />
     <Content Include="Views\Stats\Events.cshtml" />
     <Content Include="Views\Stats\Index.cshtml" />
     <Content Include="Views\Stats\Users.cshtml" />
