--- a/LanLordz/LanLordz.csproj
+++ b/LanLordz/LanLordz.csproj
@@ -92,6 +92,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\AdminControllerBase.cs" />
     <Compile Include="Controllers\AdminController.cs" />
     <Compile Include="Controllers\CachedRepositories\ConfigurationRepository.cs" />
     <Compile Include="Controllers\CachedRepositories\EventRepository.cs" />
